src/test/deca/context/valid/convFloat.deca
{
    float x = 1 + 2.5;
    println(x);

}