src/test/deca/context/invalid/modulo2.deca
// Modulo et flottants

// Date: 19.01.2022

{
int a = 4;
float b = 5;
println (a%b);
}